--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.11.2",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.1",
+    "react-toastify": "^11.0.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.10",
     "swiper": "^9.3.2"
@@ -41,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
+    "sass": "^1.83.1",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.2"
   }
